kube-8/deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      - name: multitool
        image: praqma/network-multitool
        command: ["/bin/sh", "-c", "while true; do sleep 30; done"]
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
