kube-8/Service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-svc
spec:
  selector:
    app: nginx-https
  ports:
  - port: 80
    targetPort: 80
